- added command 'status' to RPM init script
- added Rojous patch to freepopsd.vbs to clean log files
- fixed "no more log file names available" bug
- added concento.it and clarence.com (thanks m_root and Olizad)
- fixed bad &iexcl; in httpmail.lua (thanks Javier)
- patch for FreeBSD compilation problems (thanks Filippo Natali)
- fixed debian builds and debs, now hopefully conforming to debian policy
25/12/2004 0.0.23
- updated kernel.lua plugin
- es: *** empty log message *** (lisar314)
- tre.lua: Added folder parameter, now use curl for basic auth, added support for three.com.au and others (To be tested) (dpeddi)
- hotmail.lua: added mailcom and fixed hotmail.it (gareuselesinge)
- tre.lua: Bugfix, From/To/Cc should be parsed correctly, initial support for e-mail from vocal mailbox (dpeddi)
- tre.lua: Date should be now in an RFC format (dpeddi)
- tre.lua: Cleaned email body from three html tags (dpeddi)
- hotmail.lua: added co.uk, co.jp, de domains to hotmail (gareuselesinge)
- aol.lua: Fixed some netscape issues in STAT and DELE. Also urlencode the password. (russell822)
- es: fixed rss (gareuselesinge)
- yahoo.lua: fixed CRLF substitution bug (ingenuus)
- gmail.lua, es: fix (gareuselesinge)
- es: Noticias (lisar314)
- tre.lua: added purge flag (default yes) to remove files from trash on exit (dpeddi)
- es: changed slackware link (alessiofender)
- tre.lua: activated log.dbg instead of print (dpeddi)
- hotmail.lua: added a session timeout (russell822)
- added hotmail.it support
- added mailcom.lua to official plugins
- fixed supereva X-Priority
- new mimer attach_it implementation (no HEAD request required)
- supereva to the manual
- fixed gmail login in case of failure
- implemented the fallback of HEAD to GET,Range:bytes=0-1
- fixed weakness in mimer and browser if HEAD returns 500: internal server err
- moved windows to openssl-0.9.7e 
- new functrions in mimer and common modules to better support supereva
- added supereva.lua to official plugins