@@ -3,19 +3,20 @@ Section: mail
 Priority: optional
 Maintainer: Enrico Tassi <gareuselesinge@users.sourceforge.net>
 Build-Depends: debhelper (>= 4.1.16), libexpat1-dev, libcurl3-dev, tetex-extra, flex, bison, libreadline-dev, gs-common, libssl-dev, po-debconf
-Standards-Version: 3.6.1.0
+Standards-Version: 3.6.1.1
 
 Package: freepops
 Architecture: any
 Depends: ${shlibs:Depends}, debconf
-Description: pop3 interface to webmails
- freepopsd is a daemon that acts as a local POP3 server, translating
- local pop3 command to remote http requests to the supported
- webmail sites.
+Description: POP3 interface to several webmails
+ freepopsd is a POP3 daemon that translates local POP3 commands
+ to remote HTTP requests to the supported webmail sites.
+ .
+ freepopsd can also be used as RSS aggregator and POP3 forwarder.
 
 Package: freepops-doc
 Architecture: all
 Depends: 
 Description: freepops user/developer manual
- This is the manual in pdf format for freepops.
+ This is the manual in PDF format for freepops.
  
