@@ -6,7 +6,7 @@ This is freepops, written and maintained by
 on Mon,  3 Nov 2003 19:46:38 +0100.
 
 The original source can always be found at:
-	http://freepops.sf.net
+	http://freepops.org
 	
 
 Copyright (C) 2003  
