@@ -1,4 +1,5 @@
 usr/bin
+usr/lib/freepops
 usr/share/man/man1
 usr/share/pixmaps/
 etc/default/
