@@ -20,18 +20,12 @@ set -e
 case "$1" in
     remove|upgrade|deconfigure)
 
-	invoke-rc.d freepops stop || true
-	echo
+	invoke-rc.d freepops stop 2>/dev/null  || true
 
-	# Source debconf library.
-	#. /usr/share/debconf/confmodule
-
-	#db_get freepops/jail
-	#if [ "$RET" = true ]; then
-		JAIL_SCRIPT=/usr/share/doc/freepops/create_jail.sh
-		JAIL_DIR=`/bin/sh $JAIL_SCRIPT get-dir`
-		rm -rf $JAIL_DIR
-	#fi
+	JAIL_SCRIPT=/usr/lib/freepops/create_jail.sh
+	JAIL_DIR=`/bin/sh $JAIL_SCRIPT get-dir`
+	rm -rf $JAIL_DIR
+	rm -rf /var/lib/freepops
 
         ;;
 	
